# ShejiYouxi

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: api.rs  error.rs  layout.rs  lockfile.rs  main.rs  screen.rs
src/api/: client.rs  clients.rs  endpoint.rs  error.rs  query.rs  types.rs  valorant_lockfile.rs
src/api/clients/: error.rs  valorant_api.rs  valorant_api_local.rs
src/api/endpoints/: local.rs
src/api/endpoints/local/: friend_requests.rs  friends.rs  presence.rs  remove_friend_request.rs  send_friend_request.rs
src/api/types/: authentication.rs  common.rs  contract.rs  current_game.rs  local.rs  local_chat.rs  pregame.rs  store.rs
src/api/types/authentication/: auth_request.rs  entitlement.rs  pas_token.rs  player_info.rs  riot_client_config.rs  riot_geo.rs
src/api/types/contract/: common.rs  item_upgrades.rs
src/api/types/current_game/: current_game_loadouts.rs  current_game_match.rs  current_game_player.rs
src/api/types/local/: account_alias.rs  chat_session.rs  client_region.rs  entitlements_token.rs  friend_requests.rs  friends.rs  local_help.rs  local_swagger_docs.rs  presence.rs  rso_user_info.rs  send_friend_request.rs  sessions.rs
src/api/types/local_chat/: all_chat_info.rs  chat_history.rs  chat_participants.rs  common.rs  current_game_chat_info.rs  party_chat_info.rs  pregame_chat_info.rs  send_chat.rs
src/api/types/pregame/: common.rs  pregame_loadouts.rs  pregame_match.rs
src/api/types/store/: common.rs  owned_items.rs  prices.rs  storefront.rs  (+1 more)
src/screen/: home.rs  settings.rs
src/stylesheet/sidebar/: container.rs
