[package]
name = "sheji_youxi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
iced = "0.12"
reqwest = { version = "0.12.3", features = ["blocking"] }
thiserror = "1.0.58"
base64 = "0.22.0"
bytes = "1.6.0"
futures-util = "0.3.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5.0"
